@@ -1,5 +1,8 @@
 Changes with Apache 1.2
 
+  *) Inherit virtual server port from main server if none (or "*") is
+     given for VirtualHost.  [Dean Gaudet]
+
   *) If the lookup for a DirectoryIndex name with content negotiation
      has found matching variants, but none are acceptable, return the
      negotiation result if there are no more DirectoryIndex names to lookup.
